--- a/app.json
+++ b/app.json
@@ -1,42 +1,38 @@
 {
-  "expo": {
-    "name": "WeatherApplication",
-    "slug": "WeatherApplication",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "weatherapplication",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ]
-    ],
-    "experiments": {
-      "typedRoutes": true
-    }
-  }
-}
+     "expo": {
+       "name": "WeatherApplication",
+       "slug": "WeatherApplication",
+       "version": "1.0.0",
+       "orientation": "portrait",
+       "icon": "./assets/icon.png",
+       "splash": {
+         "image": "./assets/splash.png",
+         "resizeMode": "contain",
+         "backgroundColor": "#ffffff"
+       },
+       "updates": {
+         "fallbackToCacheTimeout": 0
+       },
+       "assetBundlePatterns": ["**/*"],
+       "ios": {
+         "supportsTablet": true,
+         "permissions": [
+           "LOCATION"
+         ]
+       },
+       "android": {
+         "adaptiveIcon": {
+           "foregroundImage": "./assets/images/Welcome2.png",
+           "backgroundColor": "#ffffff"
+         },
+         "permissions": [
+           "ACCESS_FINE_LOCATION",
+           "ACCESS_COARSE_LOCATION"
+         ]
+       },
+       "web": {
+         "favicon": "./assets/favicon.png",
+         "output": "single"
+       }
+     }
+   }
